src/test/ui/issues/issue-78957.stderr
error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-78957.rs:6:16
   |
LL | pub struct Foo<#[inline] const N: usize>;
   |                ^^^^^^^^^       - not a function or closure

error: attribute should be applied to a function
  --> $DIR/issue-78957.rs:8:16
   |
LL | pub struct Bar<#[cold] const N: usize>;
   |                ^^^^^^^       - not a function
   |
note: the lint level is defined here
  --> $DIR/issue-78957.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-78957.rs:11:23
   |
LL | pub struct Baz<#[repr(C)] const N: usize>;
   |                       ^         - not a struct, enum, or union

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-78957.rs:14:17
   |
LL | pub struct Foo2<#[inline] 'a>(PhantomData<&'a ()>);
   |                 ^^^^^^^^^ -- not a function or closure

error: attribute should be applied to a function
  --> $DIR/issue-78957.rs:16:17
   |
LL | pub struct Bar2<#[cold] 'a>(PhantomData<&'a ()>);
   |                 ^^^^^^^ -- not a function
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-78957.rs:19:24
   |
LL | pub struct Baz2<#[repr(C)] 'a>(PhantomData<&'a ()>);
   |                        ^   -- not a struct, enum, or union

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-78957.rs:22:17
   |
LL | pub struct Foo3<#[inline] T>(PhantomData<T>);
   |                 ^^^^^^^^^ - not a function or closure

error: attribute should be applied to a function
  --> $DIR/issue-78957.rs:24:17
   |
LL | pub struct Bar3<#[cold] T>(PhantomData<T>);
   |                 ^^^^^^^ - not a function
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-78957.rs:27:24
   |
LL | pub struct Baz3<#[repr(C)] T>(PhantomData<T>);
   |                        ^   - not a struct, enum, or union

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0517, E0518.
For more information about an error, try `rustc --explain E0517`.
